# hellbot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.yml  pull_request_template.md
.github/workflows/: python-package.yml
data/: error_phrases.txt  hellbot.db  inspirational_quotes.txt  test_db.db
data/db_init/: db_init.sql
docs/: reference_build_task.txt
docs/architecture/: cache_function.md  classes.md
src/: __init__.py  __main__.py  api.py  api_utils.py  classes.py  configure_logger.py  databases.py  utils.py
tests/reports/: index.html
tests/test_data/: test_strings.txt
tests/unit/: test_api.py  test_api_utils.py  test_classes.py  test_utils.py
