[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hellbot"
version = "0.1.0"
description = "Talk to General Brasch from Helldivers 2 directly from your Discord server."
authors = [
    { name="dakotatokad" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 88
